changed the readme

--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 /***********************************************
  DEFENDERS FROM PAST
+
+ Author:	Kushagra Gour (@chinchang457)
+ Licensed under WTFPL
 ***********************************************/
 
 
-README
+A game developed with HTML5 technologies.
